--- a/Monopad/Base.lproj/MainMenu.xib
+++ b/Monopad/Base.lproj/MainMenu.xib
@@ -697,7 +697,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="465" height="360"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="o6A-8A-Yig">
+                                <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" allowsUndo="YES" smartInsertDelete="YES" id="o6A-8A-Yig">
                                     <rect key="frame" x="0.0" y="0.0" width="465" height="360"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
